adicianando validacao da senha

--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -4,8 +4,7 @@
     <title>Resultado</title>
 </head>
 <body>
-    <p th:text="${nome}"/>
-
-
+    <p th:text="${nome}"></p>
+    <p th:text="${senha}"></p>
 </body>
 </html>
